--- a/css/main.css
+++ b/css/main.css
@@ -800,7 +800,7 @@
   .our_products .container-sm {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    padding: 90px 0;
+    padding: 50px 10px;
     gap: 30px; }
     @media (min-width: 768px) {
       .our_products .container-sm {
@@ -871,15 +871,20 @@
       height: 1px; }
   .our_products__carousel__imagen {
     width: 100%;
-    height: 100%;
-    padding: 0 18px; }
+    padding: 0 5px; }
+    @media (min-width: 768px) {
+      .our_products__carousel__imagen {
+        padding: 0 18px; } }
     .our_products__carousel__imagen img {
       border-radius: 15px; }
 
 .swiper_products {
   width: 100%;
-  height: 100%;
+  height: 80%;
   overflow: hidden; }
+  @media (min-width: 768px) {
+    .swiper_products {
+      height: 100%; } }
   .swiper_products .swiper-slide {
     width: 100% !important;
     height: 100%; }
