--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@
 @import 'layout/menu';
 @import 'layout/footer';
 @import 'layout/media';
+@import 'layout/submenu';
 
 //*Home
 @import 'components/home/hero';
