--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -130,7 +130,7 @@
 			
 
 			&--active{
-				color: $mikado_yellow;
+				color: $la_salle_green;
 
 				hr{
 					width: 50%;
@@ -157,7 +157,7 @@
 					}
 
 				&:hover{
-					color: $mikado_yellow;
+					color: $la_salle_green;
 
 					hr{
 						opacity: 1;
@@ -184,14 +184,14 @@
 				}
 
 				&:hover{
-					color: $mikado_yellow;
+					color: $la_salle_green;
 					hr{
 						opacity: 1;
 					}
 				}
 
 				&--active{
-					color: $mikado_yellow;
+					color: $la_salle_green;
 
 					hr{
 						opacity: 1;
@@ -213,7 +213,7 @@
 					}
 
 				&:hover{
-					color: $mikado_yellow;
+					color: $la_salle_green;
 
 					hr{
 						opacity: 1;
@@ -235,7 +235,7 @@
 					}
 
 				&:hover{
-					color: $mikado_yellow;
+					color: $la_salle_green;
 
 					hr{
 						opacity: 1;
@@ -257,7 +257,7 @@
 					}
 
 				&:hover{
-					color: $mikado_yellow;
+					color: $la_salle_green;
 
 					hr{
 						opacity: 1;
@@ -279,7 +279,7 @@
 					}
 
 				&:hover{
-					color: $mikado_yellow;
+					color: $la_salle_green;
 
 					hr{
 						opacity: 1;
@@ -301,7 +301,7 @@
 					}
 
 				&:hover{
-					color: $mikado_yellow;
+					color: $la_salle_green;
 
 					hr{
 						opacity: 1;
