--- a/css/main.css
+++ b/css/main.css
@@ -310,19 +310,19 @@
   .menu__link__submenu {
     padding: 10px; }
   .menu__link--one:hover {
-    color: #F7C50A; }
+    color: #1B8233; }
   .menu__link--two:hover {
-    color: #F7C50A; }
+    color: #1B8233; }
   .menu__link--three:hover {
-    color: #F7C50A; }
+    color: #1B8233; }
   .menu__link--four:hover {
-    color: #F7C50A; }
+    color: #1B8233; }
   .menu__link--five:hover {
-    color: #F7C50A; }
+    color: #1B8233; }
   .menu__link--six:hover {
-    color: #F7C50A; }
+    color: #1B8233; }
   .menu__link--seven:hover {
-    color: #F7C50A; }
+    color: #1B8233; }
 
 .footer {
   width: 100%;
