--- a/scss/layout/_menu.scss
+++ b/scss/layout/_menu.scss
@@ -66,49 +66,49 @@
 
 		&--one{
 			&:hover{
-				color: $mikado_yellow;
+				color: $la_salle_green;
 			}
 			
 		}
 
 		&--two{
 			&:hover{
-				color: $mikado_yellow;
+				color: $la_salle_green;
 			}
 			
 		}
 
 		&--three{
 			&:hover{
-				color: $mikado_yellow;
+				color: $la_salle_green;
 			}
 			
 		}
 
 		&--four{
 			&:hover{
-				color: $mikado_yellow;
+				color: $la_salle_green;
 			}
 			
 		}
 
 		&--five{
 			&:hover{
-				color: $mikado_yellow;
+				color: $la_salle_green;
 			}
 			
 		}
 
 		&--six{
 			&:hover{
-				color: $mikado_yellow;
+				color: $la_salle_green;
 			}
 			
 		}
 
 		&--seven{
 			&:hover{
-				color: $mikado_yellow;
+				color: $la_salle_green;
 			}
 			
 		}
