--- a/scss/components/home/_idea.scss
+++ b/scss/components/home/_idea.scss
@@ -39,6 +39,7 @@
             color: $mikado_yellow;
             text-align: center;
             padding-bottom: 15px;
+            text-transform: uppercase;
 
             @media(min-width: 1199px){
                 font-size: 30px;
