--- a/scss/components/home/_our_products.scss
+++ b/scss/components/home/_our_products.scss
@@ -32,9 +32,10 @@
             color: #fff;
             font-size: 25px;
             font-weight: 600;
+            text-transform: uppercase;
 
             @media(min-width:768px){
-                width: 70%;
+                width: 80%;
                 font-size: 40px;
             }
         }
