--- a/scss/components/home/_reduces_costs.scss
+++ b/scss/components/home/_reduces_costs.scss
@@ -67,6 +67,7 @@
             font-weight: 700;
             text-align: center;
             color: $saffron_mango;
+            text-transform: uppercase;
 
             @media(min-width: 992px){
                 font-size: 30px;
