--- a/scss/components/home/_sales.scss
+++ b/scss/components/home/_sales.scss
@@ -49,6 +49,7 @@
             font-size: 25px;
             font-family: poppins;
             margin-bottom: 10px;
+            text-transform: uppercase;
 
             @media(min-width:768px){
                 font-size: 30px;
