--- a/scss/components/home/_win_win.scss
+++ b/scss/components/home/_win_win.scss
@@ -25,6 +25,7 @@
             font-size: 25px;
             font-family: poppins;
             margin-bottom: 15px;
+            text-transform: uppercase;
 
             @media(min-width:768px){
                 font-size: 30px;
