--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,6 +22,12 @@
 @import 'components/home/our_products';
 @import 'components/home/sales';
 
+//*nosotros
+@import 'components/nosotros/hero';
+@import 'components/nosotros/us';
+@import 'components/nosotros/certifcation';
+@import 'components/nosotros/goal';
+
 
 
 *{
