--- a/scss/components/home/_hero.scss
+++ b/scss/components/home/_hero.scss
@@ -76,6 +76,7 @@
                     width: 100%;
                     font-size: 25px;
                     color: $mikado_yellow;
+                    text-transform: uppercase;
     
                     @media(min-width: 992px){
                         font-size: 70px;
@@ -152,6 +153,7 @@
                     font-size: 25px;
                     color: $mikado_yellow;
                     text-align: center;
+                    text-transform: uppercase;
     
                     @media(min-width: 992px){
                         text-align: start;
