--- a/scss/components/home/_promotion.scss
+++ b/scss/components/home/_promotion.scss
@@ -22,6 +22,7 @@
         color: white;
         text-shadow: 2px 2px 5px black;
         text-align: center;
+        text-transform: uppercase;
 
         @media(min-width:768px){
             font-size: 48px;
