--- a/scss/components/nosotros/_goal.scss
+++ b/scss/components/nosotros/_goal.scss
@@ -6,14 +6,84 @@
 
     .container-sm{
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+
+          @media(min-width: 1199px){
+            padding: 60px 0;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 0;
+        }
     }
 
     &__imagen{
+        width: 80%;
+        margin: auto;
+       
+
+        @media(min-width: 1199px){
+            width: 100%;
+        }
 
     }
 
     &__text{
-        
+        @include flex-center-center;
+        flex-direction: column;
+        gap: 60px;
+
+        &__one{
+            h1{
+                color: #1b8233;
+                text-align: center;
+                font-weight: 900;
+                font-size: 20px;
+                margin-bottom: 15px;
+                text-transform: uppercase;
+    
+                @media(min-width:768px){
+                    font-size: 30px;
+                    margin-bottom: 30px;
+                }
+            }
+    
+            p{
+                font-family: hind;
+                color: #000000;
+                line-height: 26px;
+                letter-spacing: 0.3px;
+                text-align: center;
+                font-size: 15px;
+                margin-bottom: 10px;
+    
+                @media(min-width:768px){
+                    font-size: 17px;
+                    margin-bottom: 20px;
+                }
+            }
+        }
+
+        &__button{
+            @include flex-center-center;
+            background-color:$mikado_yellow ;
+
+            /*Text*/
+            font-size: 14px;
+            font-weight: 800;
+            margin-top: 16px;
+            letter-spacing: 0.5px;
+            padding: 12px 23px;
+            color: $white;
+
+            @media(min-width:768px){
+                font-size: 20px;
+            }
+
+            &:hover{
+                color: $white;
+                background-color:$black ;
+                border: 1px solid $mikado_yellow;
+            }
+        }
     }
 }
