--- a/css/main.css
+++ b/css/main.css
@@ -1037,21 +1037,26 @@
 .us {
   position: relative;
   width: 100%;
-  width: 100%;
+  height: 100%;
   background-color: #000000; }
+  @media (min-width: 1199px) {
+    .us {
+      height: 500px; } }
   .us .container-sm {
     display: grid;
     grid-template-columns: repeat(1, 1fr); }
     @media (min-width: 1199px) {
       .us .container-sm {
-        grid-template-columns: repeat(2, 1fr); } }
+        grid-template-columns: repeat(2, 1fr);
+        gap: 40px; } }
   .us__text h1 {
     font-weight: 600;
     font-size: 30px;
     color: #F7C50A;
     text-shadow: 2px 2px 5px black;
     text-align: center;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    padding-bottom: 30px; }
     @media (min-width: 768px) {
       .us__text h1 {
         font-size: 48px; } }
@@ -1062,7 +1067,8 @@
     letter-spacing: 0.3px;
     text-align: center;
     font-size: 15px;
-    margin-bottom: 10px; }
+    margin-bottom: 10px;
+    text-align: justify; }
     @media (min-width: 768px) {
       .us__text p {
         font-size: 17px;
@@ -1073,8 +1079,8 @@
     @media (min-width: 1199px) {
       .us__imagen {
         position: relative;
-        bottom: 120px;
-        width: 500px; } }
+        bottom: 400px;
+        width: 565px; } }
 
 .certification {
   position: relative;
