--- a/scss/components/nosotros/_us.scss
+++ b/scss/components/nosotros/_us.scss
@@ -1,8 +1,12 @@
 .us{
     position: relative;
     width: 100%;
-    width: 100%;
+    height: 100%;
     background-color: $black;
+
+    @media(min-width:1199px){
+        height: 500px;
+    }
 
     .container-sm{
         display: grid;
@@ -10,10 +14,12 @@
 
         @media(min-width: 1199px){
             grid-template-columns: repeat(2, 1fr);
+            gap: 40px;
         }
     }
 
     &__text{
+        
         h1{
             font-weight: 600;
             font-size: 30px;
@@ -21,6 +27,7 @@
             text-shadow: 2px 2px 5px black;
             text-align: center;
             text-transform: uppercase;
+            padding-bottom: 30px;
     
             @media(min-width:768px){
                 font-size: 48px;
@@ -35,6 +42,7 @@
             text-align: center;
             font-size: 15px;
             margin-bottom: 10px;
+            text-align: justify;
 
             @media(min-width:768px){
                 font-size: 17px;
@@ -50,8 +58,8 @@
 
         @media(min-width: 1199px){
             position: relative;
-            bottom: 120px;
-            width: 500px;
+            bottom: 400px;
+            width: 565px;
         }
     }
 }
