--- a/css/main.css
+++ b/css/main.css
@@ -1061,7 +1061,6 @@
       .us__text h1 {
         font-size: 48px; } }
   .us__text p {
-    font-family: hind;
     color: #FFFFFF;
     line-height: 26px;
     letter-spacing: 0.3px;
@@ -1142,7 +1141,7 @@
       .goal .container-sm {
         padding: 60px 0;
         grid-template-columns: repeat(2, 1fr);
-        gap: 0; } }
+        gap: 60px; } }
   .goal__imagen {
     width: 80%;
     margin: auto; }
@@ -1167,7 +1166,6 @@
           font-size: 30px;
           margin-bottom: 30px; } }
     .goal__text__one p {
-      font-family: hind;
       color: #000000;
       line-height: 26px;
       letter-spacing: 0.3px;
@@ -1192,7 +1190,7 @@
       color: #FFFFFF; }
       @media (min-width: 768px) {
         .goal__text__button {
-          font-size: 20px; } }
+          font-size: 30px; } }
       .goal__text__button:hover {
         color: #FFFFFF;
         background-color: #000000;
