--- a/scss/components/nosotros/_goal.scss
+++ b/scss/components/nosotros/_goal.scss
@@ -12,15 +12,14 @@
           @media(min-width: 1199px){
             padding: 60px 0;
             grid-template-columns: repeat(2, 1fr);
-            gap: 0;
+            gap: 60px;
         }
     }
 
     &__imagen{
         width: 80%;
         margin: auto;
-       
-
+    
         @media(min-width: 1199px){
             width: 100%;
         }
@@ -48,7 +47,6 @@
             }
     
             p{
-                font-family: hind;
                 color: #000000;
                 line-height: 26px;
                 letter-spacing: 0.3px;
@@ -76,7 +74,7 @@
             color: $white;
 
             @media(min-width:768px){
-                font-size: 20px;
+                font-size: 30px;
             }
 
             &:hover{
