--- a/css/main.css
+++ b/css/main.css
@@ -1136,7 +1136,9 @@
   .goal .container-sm {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    gap: 20px; }
+    gap: 20px;
+    padding-top: 30px;
+    padding-bottom: 30px; }
     @media (min-width: 1199px) {
       .goal .container-sm {
         padding: 60px 0;
