--- a/scss/components/nosotros/_goal.scss
+++ b/scss/components/nosotros/_goal.scss
@@ -8,6 +8,8 @@
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         gap: 20px;
+        padding-top: 30px;
+        padding-bottom: 30px;
 
           @media(min-width: 1199px){
             padding: 60px 0;
