--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,6 +27,7 @@
 @import 'components/nosotros/us';
 @import 'components/nosotros/certifcation';
 @import 'components/nosotros/goal';
+@import 'components/nosotros/situation';
 
 
 
