--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -44,7 +44,7 @@
 				&__bar {
 					width: 100%;
 					height: 2px;
-					background-color: $black;
+					background-color: $la_salle_green;
 					position: relative;
 					transition: 0.3s;
 	
@@ -55,7 +55,7 @@
 						height: 100%;
 						top: -8px;
 						left: 0;
-						background-color: $black;
+						background-color: $la_salle_green;
 						transition: 0.3s;
 					}
 	
@@ -66,7 +66,7 @@
 						height: 100%;
 						bottom: -8px;
 						left: 0;
-						background-color: $black;
+						background-color: $la_salle_green;
 						transition: 0.3s;
 					}
 	
