--- a/scss/layout/_media.scss
+++ b/scss/layout/_media.scss
@@ -1,7 +1,7 @@
 .media{
     position: fixed;
 	top: 250px;
-	left: 0px;
+	left: 0;
 	display: none;
 	transform: rotate(270deg);
 	z-index: 110;
@@ -16,6 +16,6 @@
         width: 19px;
         font-weight: 700;
         font-size: 12px;
-        color: $black;
+        color: $mikado_yellow;
     }
 }
