--- a/css/main.css
+++ b/css/main.css
@@ -308,7 +308,13 @@
     width: 100%;
     border: 0.09px solid #605E5E; }
   .menu__link__submenu {
-    padding: 10px; }
+    padding: 10px;
+    display: none;
+    z-index: 200; }
+    .menu__link__submenu--active {
+      display: flex;
+      justify-content: center;
+      flex-direction: column; }
   .menu__link--one:hover {
     color: #1B8233; }
   .menu__link--two:hover {
@@ -350,7 +356,7 @@
   display: none;
   transform: rotate(270deg);
   z-index: 110; }
-  @media (min-width: 992px) {
+  @media (min-width: 1199px) {
     .media {
       display: flex;
       align-items: flex-start;
