--- a/scss/main.scss
+++ b/scss/main.scss
@@ -29,6 +29,9 @@
 @import 'components/nosotros/goal';
 @import 'components/nosotros/situation';
 
+//*galeria
+@import 'components/galeria/hero';
+@import 'components/galeria/products';
 
 
 *{
