--- a/css/main.css
+++ b/css/main.css
@@ -1270,6 +1270,62 @@
           .situation__grid__item p {
             width: 100%; } }
 
+.hero_galeria {
+  width: 100%;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  height: 500px;
+  background-image: url("../img/galb.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; }
+  @media (min-width: 1199px) {
+    .hero_galeria {
+      height: 800px; } }
+
+.products {
+  width: 100%;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  height: 100%;
+  background-color: #000000;
+  padding: 30px 0; }
+  @media (min-width: 1199px) {
+    .products {
+      padding: 90px 0; } }
+  .products .container-sm {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column; }
+  .products h1 {
+    width: 100%;
+    font-weight: 600;
+    font-size: 30px;
+    color: #F7C50A;
+    text-shadow: 2px 2px 5px black;
+    text-align: center;
+    text-transform: uppercase;
+    padding-bottom: 20px; }
+    @media (min-width: 768px) {
+      .products h1 {
+        font-size: 48px;
+        width: 80%; } }
+  .products p {
+    color: #FFFFFF;
+    line-height: 26px;
+    letter-spacing: 0.3px;
+    text-align: center;
+    font-size: 15px;
+    margin-bottom: 10px;
+    text-align: center; }
+    @media (min-width: 768px) {
+      .products p {
+        font-size: 17px;
+        margin-bottom: 20px; } }
+
 * {
   margin: 0;
   padding: 0;
